@@ -1,3 +1,12 @@
+2003-03-23  Theodore A. Roth  <troth@openavr.org>
+
+	* avr.c: Add avr_read_byte_default().
+	Have avr_read_byte() call pgm->read_byte() or avr_read_byte_default().
+	Add avr_write_byte_default().
+	Have avr_write_byte() call pgm->write_byte or avr_write_byte_default().
+	* pgm.c: Initialize pgm->write_byte and pgm->read_byte.
+	* pgm.h: Add write_byte and read_byte fields to struct programmer_t.
+
 2003-03-17  Theodore A. Roth  <troth@openavr.org>
 
 	* avrdude.conf.in: Fix typo for devicecode deprecation comment.
